unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Submitted_for_Evaluation_By__c.field-meta.xml
<CustomField>
        <fullName>Submitted_for_Evaluation_By__c</fullName>
        <label>Submitted for Evaluation By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>