unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Submitted_for_Evaluation_Date__c.field-meta.xml
<CustomField>
        <fullName>Submitted_for_Evaluation_Date__c</fullName>
        <label>Submitted for Evaluation Date</label>
        <type>DateTime</type>
    </CustomField>