unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Summary__c.field-meta.xml
<CustomField>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>