unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Symptom_Code__c.field-meta.xml
<CustomField>
        <fullName>Symptom_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Symptom Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>SYMPTOM CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Complaints (Symptom Code)</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </CustomField>