unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Test_User2__c.field-meta.xml
<CustomField>
        <fullName>Test_User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test_User2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints1</relationshipName>
        <type>Lookup</type>
    </CustomField>