unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Test_User3__c.field-meta.xml
<CustomField>
        <fullName>Test_User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test_User3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints2</relationshipName>
        <type>Lookup</type>
    </CustomField>