unpackaged/main/default/objects/CMPL123CME__Complaint__c/fields/Will_a_CAPA_be_issued_or_has_a_CAPA_been__c.field-meta.xml
<CustomField>
        <fullName>Will_a_CAPA_be_issued_or_has_a_CAPA_been__c</fullName>
        <label>Will a CAPA be issued or has a CAPA been</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>