unpackaged/main/default/objects/CMPL123CME__Complaint__c/validationRules/Assessment_not_Completed.validationRule-meta.xml
<ValidationRule>
        <fullName>Assessment_not_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123CME__CMPL123_WF_Action__c ) &amp;&amp; CMPL123CME__CMPL123_WF_Action__c = "Close Complaint" &amp;&amp; Assessment_Completed__c = False</errorConditionFormula>
        <errorMessage>Please complete the Assessment and check the box Assessment Completed</errorMessage>
    </ValidationRule>