unpackaged/main/default/objects/CMPL123CME__Complaint__c/validationRules/Investigation_not_completed.validationRule-meta.xml
<ValidationRule>
        <fullName>Investigation_not_completed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123CME__CMPL123_WF_Action__c ) &amp;&amp; CMPL123CME__CMPL123_WF_Action__c = "Close Complaint" &amp;&amp; ISPICKVAL( Investigation_Status__c , "")</errorConditionFormula>
        <errorMessage>Please fill Investigation Status field</errorMessage>
    </ValidationRule>