unpackaged/main/default/objects/CMPL123CME__Complaint__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Customer__c</columns>
        <columns>CMPL123CME__Date_Due__c</columns>
        <columns>CMPL123CME__Date_Opened__c</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Assigned_To__c</columns>
        <columns>CMPL123CME__Catalog_No__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>